# finplanning

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: update-core.yml
.streamlit/: config.toml
app/: formatters.py  main.py  state.py
app/charts/: cash_flow_sankey.py  gap_analysis.py  net_worth.py  tax_heatmap.py
app/components/: sidebar.py  summary_metrics.py  year_grid.py
app/views/: cash_flow.py  data_export.py  edit_plan.py  monte_carlo.py  monte_carlo_section.py  net_worth_view.py  overview.py  tax_analysis.py
examples/: bc-top-1pct-couple-40.yaml  canada-typical-40-couple.yaml  john-and-jane.yaml  sample-plan.yaml  settings.yaml
tests/: conftest.py  test_entrypoint.py  test_ui_charts.py  test_ui_formatters.py  test_ui_state.py  test_yaml_pager.py  test_year_grid_selection.py
tests/e2e/: test_navigation.py
wheels/: finplanning_core-0.2.0-cp312-none-any.whl  finplanning_core-0.2.1-cp312-none-any.whl  finplanning_core-0.3.1-cp312-abi3-manylinux_2_28_x86_64.whl  finplanning_core-0.3.1-cp312-none-any.whl  finplanning_core-0.3.1-py3-none-any.whl  finplanning_core-0.4.0-cp312-abi3-manylinux_2_28_x86_64.whl  finplanning_core-0.5.0-cp312-abi3-manylinux_2_28_x86_64.whl  finplanning_core-0.6.0-cp312-abi3-manylinux_2_28_x86_64.whl  finplanning_core-0.6.3-cp312-abi3-manylinux_2_28_x86_64.whl  finplanning_core_native-0.1.0-cp312-abi3-macosx_11_0_arm64.whl  finplanning_core_native-0.1.0-cp312-abi3-manylinux_2_28_x86_64.whl
